--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Database Viewer</title>
+    <title>Nebun Site</title>
     <style>
         body {
             background-color: #e9e9e9; /* Background color */
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>Hai la Nebuni, hai la Nelei</h1>
+    <h1>Site-ul principal al nebunilor</h1>
     <table id="data-table">
         <thead>
             <tr>
